--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,11 @@ APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=127.65.99.205.123
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=vitalici_a
+DB_USERNAME=vitalicia_admin
+DB_PASSWORD=n9k3kYUIW21!
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
